add crud category and author

--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -2,6 +2,6 @@
     <div class="search-class">
         <p>{{book.name}}</p>
         <p>{{book?.description}}</p>
-        <button type="button" class="btn btn-primary search-class-btn">Join</button>
+        <button type="button" class="btn btn-primary search-class-btn">Read</button>
     </div>
 </div>
