--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a href=""><img src="./assets/images/logo.png"></a></li>
         <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Classes</a></li>
+        <li><a href="#">Books</a></li>
         <li><a href="#">Payments</a></li>
         <li><a href="#">Setting</a></li>
         
