--- a/src/app/components/auther/auther.component.html
+++ b/src/app/components/auther/auther.component.html
@@ -17,7 +17,7 @@
                     </div>
                    
                     <div class="mt-5 mb-3">
-                        <button type="button" class="btn btn-primary" (click)="openModal()">Add New Book</button>
+                        <button type="button" class="btn btn-primary" (click)="openModal()">Add New Auther</button>
                     </div>
                     <table class="lms-table">
                         <thead class="t-header">
