--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -30,7 +30,9 @@
                                 <td><button type="button" class="btn btn-primary"
                                         (click)="openEditModal(category)">Update</button></td>
                                 <td><button type="button" class="btn btn-danger"
-                                        (click)="deleteCategory(category.genreId)">Delete</button></td>
+                                        (click)="deleteCategory(category.genreId)">
+                                        Delete <i class="fa fa-trash-o" aria-hidden="true"> </i>
+                                    </button> </td>
                             </tr>
                         </tbody>
                     </table>
