--- a/src/app/components/all-books/all-books.component.html
+++ b/src/app/components/all-books/all-books.component.html
@@ -5,43 +5,39 @@
     <div class="content">
         <div class="C-manage-wraper">
             <div class="container-x">
-                <div class="all-wraper">
-                    <h3 class="title">Assignment Submission</h3>
+                <div class="all-wraper m-5">
+                    <h3 class="title">Book Manager</h3>
                     <div class="breadcrumb-wrap">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-                                <li class="breadcrumb-item"><a href="#">Assignments</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Submissions</li>
+                                <li class="breadcrumb-item active" aria-current="page">Manage Books</li>
                             </ol>
                         </nav>
                     </div>
-                    <div class="check-box">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="unmark submissions">
-                            <label class="form-check-label" for="unmark submissions">
-                                Show only unmark submissions
-                            </label>
-
-                            <button type="button" class="btn btn-primary" (click)="openModal()">Update</button>
+                    <div class="mb-3">
+                        <div class="">
+                            <button type="button" class="btn btn-primary" (click)="openModal()">Add Books</button>
                         </div>
                     </div>
-                    <table>
+                    <table class="lms-table">
                         <thead class="t-header">
-                            <th>Student Name</th>
-                            <th>Student Id</th>
-                            <th>Submission Date</th>
-                            <th>Marks</th>
+                            <th>Name</th>
+                            <th>ISBN</th>
+                            <th>Author</th>
+                            <th>Category</th>
+                            <th>Copies</th>
                             <th colspan="2">Operations</th>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let item of submissions;" >
-                                <td>{{item.name}}</td>
-                                <td>{{item.id}}</td>
-                                <td>{{item.date}}</td>
-                                <td>{{item.marks}}</td>
-                                <td><button type="button" class="btn btn-primary">Update</button></td>
-                                <td><button type="button" class="btn btn-danger">Delete</button></td>
+                            <tr *ngFor="let book of books;" >
+                                <td>{{book.name}}</td>
+                                <td>{{book.isbn}}</td>
+                                <td>{{book.auther?.name}}</td>
+                                <td>{{book.genre?.name}}</td>
+                                <td>{{book.amount}}</td>
+                                <td><button type="button" class="btn btn-primary" (click)="openEditModal(book)">Update</button></td>
+                                <td><button type="button" class="btn btn-danger"  (click)="deleteBook(book.id)">Delete</button></td>
                             </tr>
                         </tbody>
                     </table>
