--- a/src/app/components/book-search/book-search.component.html
+++ b/src/app/components/book-search/book-search.component.html
@@ -9,14 +9,14 @@
                     <input type="text" name="searchterm" [(ngModel)]="searchTerm" placeholder="Search.." name="search">
                     <button type="button" (click)="search()"><i class="fa fa-search"></i></button>
 
-                    <div class="filter-block">
+                    <!-- <div class="filter-block">
                         <h3 class="filters">Filters</h3>
                         <div class="row">
 
                             <div class="col-4">
                                 <div class="form-group">
                                     <label for="subject">Subject</label>
-                                    <select class="form-control" id="subject" >
+                                    <select class="form-control" id="subject">
                                         <option>Select</option>
                                         <option>Science</option>
                                         <option>Math</option>
@@ -39,9 +39,14 @@
                             </div>
                         </div>
 
+                    </div> -->
+                </div>
+
+                <div class="row">
+                    <div class="col-md-4" *ngFor="let book of books;">
+                        <app-book-card [book]="book"></app-book-card>
                     </div>
                 </div>
-                <app-book-card  *ngFor="let book of books;" [book]="book"></app-book-card>
             </div>
         </div>
     </div>
